# learn_opengl

./: .gitignore  Cargo.toml  build.rs
assets/shaders/: triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: main.rs
src/support/: mod.rs  render_gl.rs  resources.rs
