[package]
name = "glut"
version = "0.1.0"
authors = ["Benjamin GROENEVELD <bgroeneveld@sifam.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
glutin = "0.26.0"
takeable-option = "0.4"
image = "0.21"

[features]
gl_debug = ["gl/debug"]

# allow to run `cargo run --features "gl_debug"`
